[tool.poetry]
name = "anthropic-parallelism"
version = "0.1.0"
description = ""
authors = ["Milutin-S <studen.m98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.34.2"
aiohttp = "^3.10.5"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
